@@ -27,7 +27,7 @@ plan skip_all => "test_rehash is not available on this platform"
 
 sub verify {
     my ($cert, $purpose, $trustedpath, $untrusted, @opts) = @_;
-    my @args = qw(openssl verify -auth_level 1 -purpose);
+    my @args = qw(openssl verify -auth_level 1 -allow_no_subject_check -purpose);
     my @path = qw(test certs);
     push(@args, "$purpose", @opts);
     push(@args, "-CApath", $trustedpath);
